syntax = "proto3";

option go_package = "github.com/theothertomelliott/tic-tac-toverengineered/services/checker/pkg/win/rpcchecker";

message WinnerRequest{
    string game_id = 1;
}
message WinnerResponse{
    string mark = 1;
    bool has_winner = 2;
    bool is_draw = 3;
}

service Checker {
    rpc Winner(WinnerRequest) returns (WinnerResponse) {}
}